fix: one scrollbar for search result

--- a/src/main/frontend/components/icon.css
+++ b/src/main/frontend/components/icon.css
@@ -11,6 +11,6 @@
     vertical-align: middle;
 }
 
-.emojis, .icons {
+.search-result {
     @apply overflow-y-scroll max-h-80;
 }
